--- a/css/menubar.css
+++ b/css/menubar.css
@@ -1,3 +1,31 @@
+blockquote, 
+body, 
+button, 
+dd, 
+div, 
+dl, 
+dt, 
+form, 
+h1, h2, h3, h4, h5, h6, 
+input, 
+li, ol, 
+p, 
+pre, 
+td, 
+textarea, 
+th, 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  font-family: Microsoft YaHei;
+  font-size: 0.8em;
+  width: 100%;
+  height: 100%;
+}
+
 .notepad-menubar {
 	background-color: white;
 	left: 0;
@@ -58,7 +86,7 @@
 	height: 22px;
 }
 
-.notepad-menubar .shortcut {
+.notepad-menubar .txt {
 	position: absolute;
 	right: 20px;
 }
